# flatten-rs

./: Cargo.toml
.github/: renovate.json5
